# adventofcode

./: README.md  pyproject.toml
adventofcode/: util.py
problems_2021/day1/: solution_part1.py  solution_part2.py
problems_2021/day10/: solution_part1.py  solution_part2.py
problems_2021/day11/: solution_part1.py  solution_part2.py
problems_2021/day12/: solution_part1.py  solution_part2.py
problems_2021/day13/: solution.py
problems_2021/day14/: solution_part1.py  solution_part2.py
problems_2021/day15/: solution_part1.py  solution_part2.py
problems_2021/day16/: solution_part1.py
problems_2021/day17/: solution.py
problems_2021/day18/: solution.py
problems_2021/day19/: solution.py
problems_2021/day2/: solution_part1.py  solution_part2.py
problems_2021/day20/: solution.py
problems_2021/day21/: solution_part1.py  solution_part2.py
problems_2021/day22/: solution_part1.py  solution_part2.py
problems_2021/day23/: solution_part1.py  solution_part2.py
problems_2021/day24/: solution.py
problems_2021/day25/: solution.py
problems_2021/day3/: solution_part1.py  solution_part2.py
problems_2021/day4/: solution_part1.py  solution_part2.py
problems_2021/day5/: solution_part1.py  solution_part2.py
problems_2021/day6/: solution_part1.py  solution_part2.py
problems_2021/day7/: solution_part1.py  solution_part2.py
problems_2021/day8/: solution_part1.py  solution_part2.py
problems_2021/day9/: solution_part1.py  solution_part2.py
problems_2022/day1/: solution.py
problems_2022/day10/: solution.py
problems_2022/day11/: solution.py
(+13 files in other folders)
