[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Yibo Zhang <zybmax09@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.4"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
